name: selectel-storage
version: 0.0.1
author: Mitroshin Maxim <rocco66max@gmail.com>

category: API
synopsis: API for Selectel object storage.

cabal-version: >= 1.18
tested-with: GHC ==7.6.*
build-type: Simple

library
    ghc-options:      -Wall -fno-warn-orphans
    default-language: Haskell2010
    hs-source-dirs:   src
    build-depends: base                 == 4.6.*
                 , bytestring           == 0.10.*
                 , hswift               == 0.0.*
    exposed-modules: Example
    default-extensions: LambdaCase
                        OverloadedStrings
                        RecordWildCards